--- a/styles/globals.css
+++ b/styles/globals.css
@@ -180,7 +180,7 @@ body {
   height: 100%;
   background-repeat: no-repeat;
   background-position: 50%;
-  background-image: url(../public/gridd-bg.svg);
+  /* background-image: url(../public/gridd-bg.svg); */
 }
 
 #countdown {
